# Electronics_Retail

./: .env.sample  README.md  data.json  pyproject.toml
companies/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_type.py
config/: settings.py  urls.py
orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
users/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
