[tool.poetry]
name = "electronics-retail"
version = "0.1.0"
description = ""
authors = ["Dmitriy Bychkov <582620@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_retail"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^23.5"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
